[gd_scene load_steps=7 format=3 uid="uid://b018n8734ln7h"]

[ext_resource type="Script" path="res://game_screens/hell_scene.gd" id="1_pgjjg"]
[ext_resource type="Texture2D" uid="uid://cus42ouva080c" path="res://assets/images/screens/hell_screen/hell_bg.png" id="2_50xmr"]
[ext_resource type="PackedScene" uid="uid://dpxut23sbwn73" path="res://npc/dialog_box_reborn.tscn" id="3_piko4"]
[ext_resource type="Texture2D" uid="uid://dghcgeucuwun8" path="res://assets/images/screens/hell_screen/hell_eloter.png" id="3_qpy2k"]
[ext_resource type="Texture2D" uid="uid://daicvfngyetr7" path="res://assets/images/screens/hell_screen/hell_emberek.png" id="4_udlye"]
[ext_resource type="Texture2D" uid="uid://cfu4hpqx38oxs" path="res://assets/images/screens/hell_screen/visszanyil.png" id="5_3vo01"]

[node name="hell_scene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pgjjg")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_50xmr")

[node name="People" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_udlye")

[node name="Front" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_qpy2k")

[node name="BackButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 1700.0
offset_top = 327.0
offset_right = 1822.0
offset_bottom = 593.0
scale = Vector2(2, 2)
texture_normal = ExtResource("5_3vo01")
ignore_texture_size = true
stretch_mode = 3

[node name="DialogBoxReborn" parent="." instance=ExtResource("3_piko4")]
dialog_box_mode = 1

[connection signal="mouse_entered" from="BackButton" to="." method="_on_back_button_mouse_entered"]
[connection signal="mouse_exited" from="BackButton" to="." method="_on_back_button_mouse_exited"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
